# django-classy-tags

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  README  README.rst  _settings_patcher.py  performance.py  pyproject.toml  requirements.in  requirements.txt  run3rdpartytests.sh  runalltests.sh  runtests.py  runtests.sh  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: codeql-analysis.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
classytags/: __init__.py  _compat.py  arguments.py  blocks.py  compat.py  core.py  exceptions.py  helpers.py  parser.py  tests.py  utils.py  values.py
classytags/test/: context_managers.py  run_tests.py
classytags/test/project/: testrunner.py
classytags/test/project/templates/: inclusion.html
classytags/test/project/templatetags/: ct_now.py
docs/: Makefile  arguments.rst  changes.rst  conf.py  contribute.rst  examples.rst  extend.rst  index.rst  installation.rst  make.bat  reference.rst  requirements.in  requirements.txt  usage.rst
ptesttags/: __init__.py  cycle.py  now.py
testdata/: __init__.py  _settings.py
testdata/templatetags/: ct_cycle.py  ct_firstof.py  ct_for.py  ct_with.py
tests/: .coveragerc  buildout.cfg  context_managers.py  requirements.txt  settings.py  test_core.py
tests/requirements/: dj22_cms37.txt  dj22_cms38.txt  dj30_cms37.txt  dj30_cms38.txt  dj31_cms38.txt  dj32_cms39.txt
tests/testdata/: manage.py  settings.py  testrunner.py
